--- a/firebase/Makefile
+++ b/firebase/Makefile
@@ -31,8 +31,8 @@ extract:
 	chmod 755 stage/firebase/bin/*
 
 package:
-	sed 's/{IDENTIFIER}/${IDENTIFIER}/' scripts/uninstall.sh > stage/firebase/bin/uninstall.sh; chmod 755 stage/firebase/bin/uninstall.sh
-	pkgbuild --version $(VERSION) --identifier $(IDENTIFIER) --scripts scripts --install-location /usr/local/firebase --root stage/firebase stage/${PKGNAME}-${VERSION}.pkg
+	sed 's/{replace}/${IDENTIFIER}/' scripts/uninstall.sh > stage/firebase/bin/uninstall.sh; chmod 755 stage/firebase/bin/uninstall.sh
+	pkgbuild --version ${VERSION} --identifier ${IDENTIFIER} --scripts scripts --install-location /usr/local/firebase --root stage/firebase stage/${PKGNAME}-${VERSION}.pkg
 
 pkgsign:
 	productsign --sign "Developer ID Installer: ${DEVNAME} (${DEVID})" stage/${PKGNAME}-${VERSION}.pkg stage/${PKGNAME}-${VERSION}-signed.pkg
