Modernize jq install

--- a/jq/Makefile
+++ b/jq/Makefile
@@ -4,13 +4,20 @@
 #
 ###############################################
 
-IDENTIFIER = com.marclavergne.jq
-VERSION = 1.6
+PKGID := com.marclavergne.jq
+PKGNAME := jq
+PKGVER := 1.6
+PKGFILE := stage/${PKGNAME}-${PKGVER}.pkg
+
+DEVNAME = Marc Lavergne
+DEVID = Q6H2FB9YW2
+USERNAME = "mlavergn@gmail.com"
 
 #
 # build package
 #
-all: download extract package
+dist: download extract pkg pkgsign install
+	@echo "done"
 
 home:
 	open https://github.com/stedolan/jq
@@ -19,18 +26,33 @@ clean:
 	rm -rf stage
 
 download: clean
-	mkdir -p stage/bin
-	curl -L -o stage/bin/jq https://github.com/stedolan/jq/releases/download/jq-${VERSION}/jq-osx-amd64
+	mkdir -p stage/${PKGNAME}
+	mkdir -p stage/scripts
+	curl -L -o stage/${PKGNAME}/jq https://github.com/stedolan/jq/releases/download/jq-${PKGVER}/jq-osx-amd64
 
 extract:
-	chmod 755 stage/bin/*
+	chmod 755 stage/${PKGNAME}/${PKGNAME}
 
-package:
-	pkgbuild --version ${VERSION} --identifier ${IDENTIFIER} --install-location /usr/local/bin --root stage/bin stage/jq.pkg
+pkg:
+	sed 's/{pkgid}/${PKGID}/g' scripts/uninstall.sh > stage/${PKGNAME}/uninstall.sh; chmod 755 stage/${PKGNAME}/uninstall.sh
+	sed -i '' 's/{pkgname}/${PKGNAME}/g' stage/${PKGNAME}/uninstall.sh
+	sed 's/{pkgname}/${PKGNAME}/g' scripts/preflight > stage/scripts/preflight
+	sed 's/{pkgname}/${PKGNAME}/g' scripts/postflight > stage/scripts/postflight
+	pkgbuild --version ${PKGVER} --identifier ${PKGID} --scripts stage/scripts --install-location /usr/local/${PKGNAME} --root stage/${PKGNAME} ${PKGFILE}
+
+pkgsign:
+	productsign --sign "Developer ID Installer: ${DEVNAME} (${DEVID})" ${PKGFILE} ${PKGFILE}.signed
+	mv ${PKGFILE}.signed ${PKGFILE}
+
+validate:
+	# codesign -dvv build/${APP}
+	pkgutil --check-signature ${PKGFILE}
+
+debug:
+	sudo installer -pkg ${PKGFILE} -target / -verbose
 
 install:
-	open stage/jq.pkg
+	open ${PKGFILE}
 
 uninstall:
-	sudo rm -f /usr/local/bin/jq
-	sudo pkgutil --forget ${IDENTIFIER}
+	sudo /usr/local/${PKGNAME}/uninstall.sh
